--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "The Node Project Spider",
+  "name": "The-Node-Project-Spider",
   "version": "0.0.1",
   "private": true,
   "scripts": {
